# remember_C

ex_1/: hello.c
malloc/: build.sh  main.c
malloc/libbolloc/: CMakeLists.txt  bolloc.c
malloc/libbolloc/include/: bolloc.h
malloc/unit_tests/: CMakeLists.txt  unit_tests.cc
